--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 <body>
   
-  <header>
-    <div class="logo">
-        <img src="https://cdn.pixabay.com/photo/2023/03/06/13/58/brand-7833518_1280.png" alt="Logo" width="50" height="auto">
-        <h1>My Landing Page</h1>
-    </div>
+  <div class="header">
+        <img class="logo" src="https://cdn.pixabay.com/photo/2023/03/06/13/58/brand-7833518_1280.png" alt="Logo" width="50" height="auto">
     <div class="nav">
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
       </ul>
     </div>
-  </header>
+  </div>
 
-  <main>
+  <div class="hero">
     <div class="dblue">
         <div class="dblue-text">
             <h2>Welcome to My Landing Page</h2>
@@ -31,35 +31,36 @@
             <img src="" alt="">
         </div>
     </div>
+  </div>
 
-    <div class="white">
+    <div class="random">
        <h2>Some Random Information</h2>
        <div class="boxes">
               <div class="item">
-                <div class="box">Item 1.</div>
+                <div class="card">Item 1.</div>
                 <p>Description for item 1.</p>
               </div>
               <div class="item">
-                <div class="box">Item 2.</div>
+                <div class="card">Item 2.</div>
                 <p>Description for item 2.</p>
               </div>
               <div class="item">
-                <div class="box">Item 3.</div>
+                <div class="card">Item 3.</div>
                 <p>Description for item 3.</p>
               </div>
               <div class="item">
-                <div class="box">Item 4.</div>
+                <div class="card">Item 4.</div>
                 <p>Description for item 4.</p>
               </div>
        </div>
     </div>
 
-    <div class="grey">
+    <div class="cuote">
         <p class="greytext">Cuote</p>
         <h2>Author</h2>
     </div>
 
-    <div class="call-to-action">
+    <div class="cta">
         <h2>Call to Action</h2>
         <p>Join us today and start your journey!</p>
         <button>Sign Up</button>
@@ -67,10 +68,10 @@
 
   </main>
 
-  <footer>
+  <div class="footer">
     <div class="footer-content">
         <p>Copyright &copy; 2025 My Landing Page. All rights reserved.</p>
     </div>
-  </footer>
+  </div>
 </body>
 </html>
