fixed: added missing button in hero section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="dblue-text">
             <h2>Welcome to My Landing Page</h2>
             <p>This is a simple landing page example.</p>
+            <button>Sign up</button>
         </div>
         <div class="imgplace">
             <img src="" alt="">
