fixed: added a lot of things

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
   
+<div class="hero-container">
   <div class="header">
-        <img class="logo" src="https://cdn.pixabay.com/photo/2023/03/06/13/58/brand-7833518_1280.png" alt="Logo" width="50" height="auto">
-    <div class="nav">
+      <h2 class="header-logo">Header Logo</h2>    
+      <div class="nav">
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
@@ -22,20 +23,17 @@
   </div>
 
   <div class="hero">
-    <div class="dblue">
-        <div class="dblue-text">
-            <h2>Welcome to My Landing Page</h2>
+        <div class="hero-content">
+            <h2 class="main-header">Welcome to My Landing Page</h2>
             <p>This is a simple landing page example.</p>
             <button>Sign up</button>
+            <img class="placeholder" src="https://images.pexels.com/photos/943096/pexels-photo-943096.jpeg" alt="">
         </div>
-        <div class="imgplace">
-            <img src="" alt="">
-        </div>
-    </div>
   </div>
+</div>
 
-    <div class="random">
-       <h2>Some Random Information</h2>
+  <div class="random">
+    <h2>Some Random Information</h2>
        <div class="boxes">
               <div class="item">
                 <div class="card">Item 1.</div>
