fixed: added img in div class and changed .card selector. also, added .card img selector

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
     <h2>Some Random Information</h2>
        <div class="boxes">
               <div class="item">
-                <div class="card">Item 1.</div>
+                <div class="card"><img src="https://www.svgrepo.com/show/452228/html-5.svg" alt="html 5 icon"></div>
                 <p>Description for item 1.</p>
               </div>
               <div class="item">
-                <div class="card">Item 2.</div>
+                <div class="card"><img src="https://www.svgrepo.com/show/452185/css-3.svg" alt="css icon"></div>
                 <p>Description for item 2.</p>
               </div>
               <div class="item">
-                <div class="card">Item 3.</div>
+                <div class="card"><img src="https://www.svgrepo.com/show/349419/javascript.svg" alt="javascript icon"></div>
                 <p>Description for item 3.</p>
               </div>
               <div class="item">
-                <div class="card">Item 4.</div>
+                <div class="card"><img src="https://www.svgrepo.com/show/452091/python.svg" alt="python icon"></div>
                 <p>Description for item 4.</p>
               </div>
        </div>
