fixed: changed html and added selectors for all cuote section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </div>
 
     <div class="cuote">
-        <p class="greytext">Cuote</p>
-        <h2>Author</h2>
+        <p class="greytext">If you haven't failed, you're not trying hard enough.</p>
+        <h2 class="author">-Jennifer Crusie</h2>
     </div>
 
     <div class="cta">
