fixed: added selector for .cta and .blue-section, added a div with blue-section class

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
     </div>
 
     <div class="cta">
+      <div class="blue-section">
         <h2>Call to Action</h2>
         <p>Join us today and start your journey!</p>
         <button>Sign Up</button>
+      </div>
     </div>
 
   </main>
