fixed: added a div to separate text and button within cta div

--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
 
     <div class="cta">
       <div class="blue-section">
-        <h2>Call to Action</h2>
-        <p>Join us today and start your journey!</p>
+        <div class="text">
+          <h2>Call to Action</h2>
+          <p>Join us today and start your journey!</p>
+        </div>
         <button>Sign Up</button>
       </div>
     </div>
