fixed: added a description to images in information section

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
        <div class="boxes">
               <div class="item">
                 <div class="card"><img src="https://www.svgrepo.com/show/452228/html-5.svg" alt="html 5 icon"></div>
-                <p>Description for item 1.</p>
+                <p>Markup language used to structure content on web pages.</p>
               </div>
               <div class="item">
                 <div class="card"><img src="https://www.svgrepo.com/show/452185/css-3.svg" alt="css icon"></div>
-                <p>Description for item 2.</p>
+                <p>Style language that defines the visual appearance of HTML elements.</p>
               </div>
               <div class="item">
                 <div class="card"><img src="https://www.svgrepo.com/show/349419/javascript.svg" alt="javascript icon"></div>
-                <p>Description for item 3.</p>
+                <p>Programming language that adds interactivity and dynamic behavior to web pages.</p>
               </div>
               <div class="item">
                 <div class="card"><img src="https://www.svgrepo.com/show/452091/python.svg" alt="python icon"></div>
-                <p>Description for item 4.</p>
+                <p>Versatile, easy-to-learn programming language used in web development, automation, data analysis, and more.</p>
               </div>
        </div>
     </div>
