fixed: change text class to cta-text class, added .cta-text and .blue-section button selectors

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="cta">
       <div class="blue-section">
-        <div class="text">
+        <div class="cta-text">
           <h2>Call to Action</h2>
           <p>Join us today and start your journey!</p>
         </div>
